admission/validatingAdmissionPolicies/policies/dns-policy/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: dns-policy-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 93de9df9-a4f9-5575-880f-03ad83338b6a
  labels:
    check-dns-policy.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    check-dns-policy.security.kolteq.com/audit: 'false,true'
    check-dns-policy.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: dns-policy
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-dns-policy.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: dns-policy-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 93de9df9-a4f9-5575-880f-03ad83338b6a
  labels:
    check-dns-policy.security.kolteq.com/warn: 'false,true'
    check-dns-policy.security.kolteq.com/audit: 'false,true'
    check-dns-policy.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: dns-policy
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-dns-policy.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: dns-policy-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 93de9df9-a4f9-5575-880f-03ad83338b6a
  labels:
    check-dns-policy.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    check-dns-policy.security.kolteq.com/enforce: 'false,true'
    check-dns-policy.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: dns-policy
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-dns-policy.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: dns-policy-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 93de9df9-a4f9-5575-880f-03ad83338b6a
  labels:
    check-dns-policy.security.kolteq.com/audit: 'false,true'
    check-dns-policy.security.kolteq.com/enforce: 'false,true'
    check-dns-policy.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: dns-policy
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-dns-policy.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: dns-policy-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 93de9df9-a4f9-5575-880f-03ad83338b6a
  labels:
    check-dns-policy.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    check-dns-policy.security.kolteq.com/audit: 'false,true'
    check-dns-policy.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: dns-policy
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-dns-policy.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: dns-policy-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 93de9df9-a4f9-5575-880f-03ad83338b6a
  labels:
    check-dns-policy.security.kolteq.com/enforce: 'false,true'
    check-dns-policy.security.kolteq.com/audit: 'false,true'
    check-dns-policy.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: dns-policy
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-dns-policy.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
